Brand > Explore > View page: Reformatted 1. tab design changed 2. Influencer modal added

--- a/app/assets/stylesheets/brands-explore.css
+++ b/app/assets/stylesheets/brands-explore.css
@@ -412,4 +412,8 @@ only screen and (max-width: 580px){
     }
 }
 
+.social-account-tabs .influencer-social-tab-content {
+    border-top: 1px solid #ddd;
+    padding-top: 0;
+}
 
