Change id name in Read only profile modal

--- a/app/views/profile/_read_only_profile_modal.html.erb
+++ b/app/views/profile/_read_only_profile_modal.html.erb
@@ -7,7 +7,7 @@
       <div class="modal-header">
         <button type="button" class="close view-profile-modal-close" data-dismiss="modal" aria-label="Close"><span
         aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel"></h4>
+        <h4 class="modal-title" id="myReadOnlyModalLabel"></h4>
       </div>
       <div class="modal-body">
         <div class="display-inline-block influencer-modal-image">
