--- a/app/views/influencers/_profile_modal.erb
+++ b/app/views/influencers/_profile_modal.erb
@@ -10,12 +10,11 @@
       </div>
       <div class="modal-body">
         <div class="display-inline-block influencer-modal-image vertical-align-middle">
-          <%= image_tag(account.influencer.profile_picture, :class => 'explore-influencer-picture', :alt => 'profile-picture') %>
+          <%= image_tag(account.profile_picture_url, :class => 'explore-influencer-picture', :alt => 'profile-picture') %>
         </div>
 
         <div class="display-inline-block influencer-modal-details vertical-align-middle">
           <h4 class="title font-raleway"><%= account.name %></h4>
-          <p class="influencer-address font-raleway"> <%= account.influencer.location %></p>
         </div>
 
         <div class="display-inline-block pull-right like-send-request">
@@ -26,7 +25,7 @@
 
         <div class="">
           <p class="profile-info font-raleway">
-            <%= account.influencer.short_bio %>
+            <%= account.about %>
           </p>
         </div>
         <!-- start of pricing section -->
