--- a/app/views/explores/_explores.erb
+++ b/app/views/explores/_explores.erb
@@ -5,7 +5,7 @@
             <div class="col-md-3 col-sm-6 col-sm-12">
               <div class="search-result-item">
                 <div class="search-result-image">
-                  <%= image_tag(account.influencer.profile_picture, class: 'img-responsive explore-search-image') %>
+                  <%= image_tag(account.page_picture, class: 'img-responsive explore-search-image') %>
                 </div>
                 <div class="influencer-data">
                   <div class="influencer-name" title="<%= account.name %>"> <%= account.name %> </div>
