--- a/app/views/influencers/_profile_modal.erb
+++ b/app/views/influencers/_profile_modal.erb
@@ -10,7 +10,7 @@
       </div>
       <div class="modal-body">
         <div class="display-inline-block influencer-modal-image vertical-align-middle">
-          <%= image_tag(account.profile_picture_url, :class => 'explore-influencer-picture', :alt => 'profile-picture') %>
+          <%= image_tag(account.page_picture, :class => 'explore-influencer-picture', :alt => 'profile-picture') %>
         </div>
 
         <div class="display-inline-block influencer-modal-details vertical-align-middle">
@@ -80,8 +80,8 @@
         <div class="social-media-info font-raleway"> Social Media Information</div>
         <p>
           <span class="view-profile-fb-twitter-color">Facebook:</span>
-          <a href="<%= "https://www.facebook.com/app_scoped_user_id/#{account.influencer.uid}/" %>" target="_blank">
-            <%= "https://www.facebook.com/app_scoped_user_id/#{account.influencer.uid}/" %>
+          <a href="<%= account.url %>" target="_blank">
+            <%= account.url %>
           </a>
         </p>
 
