- Multiple Industry field added in Social Account and pricing section - Back end work of Category field for social account

--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -64,7 +64,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     margin-bottom: 7px;
 }
 
-.brands-profile-page-wrapper input, .brands-profile-page-wrapper select, .personal-info-form .form-group textarea {
+.brands-profile-page-wrapper input, .brands-profile-page-wrapper select, .personal-info-form .form-group textarea, .social-account-tabs .influencer-industry {
     width: 70%;
     display: inline;
 }
@@ -193,7 +193,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     padding-right: 5px;
 }
 
-.social-account-tab-content .form-group input {
+.social-account-tab-content .form-group input, .social-account-tabs .influencer-industry {
     width: 33%;
 }
 
@@ -205,7 +205,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 /* style for making compatible with 320 to 767 px devices */
 @media (max-width: 768px) {
-    .brands-profile-page-wrapper input, .brands-profile-page-wrapper select, .personal-info-form .form-group textarea {
+    .brands-profile-page-wrapper input, .brands-profile-page-wrapper select, .personal-info-form .form-group textarea, .social-account-tabs .influencer-industry {
         width: 65%;
     }
 
@@ -217,7 +217,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
         width: 80%;
     }
 
-    .social-account-tabs input {
+    .social-account-tabs input, .social-account-tabs .influencer-industry {
         width: 34%;
     }
 }
@@ -444,13 +444,13 @@ div.awesomplete > ul > li {
 }
 
 @media (max-width: 900px) {
-    .social-account-tabs input {
+    .social-account-tabs input, .social-account-tabs .influencer-industry {
         width: 60%;
     }
 }
 
 @media (max-width: 768px) {
-    .social-account-tabs input {
+    .social-account-tabs input, .social-account-tabs .influencer-industry {
         width: 34%;
     }
 
