--- a/app/views/profile/_social_account_tabs.html.erb
+++ b/app/views/profile/_social_account_tabs.html.erb
@@ -22,27 +22,33 @@
             <div class="form-group">
               <div class="col-md-6 col-sm-12 col-xs-12">
                 <%= g.label :status_update_cost, 'Status Update' %>
-                <%= g.number_field :status_update_cost, { inputmode: 'numeric', pattern: '[0-9]*', min: 0, maxlength: '12' } %> INR
+                <%= g.number_field :status_update_cost, { inputmode: 'numeric', pattern: '[0-9]*', min: 0, maxlength: '12' } %> INR/day
               </div>
               <div class="col-md-6 col-sm-12 col-xs-12">
                 <%= g.label :cover_photo_cost, 'Cover Photo' %>
-                <%= g.number_field :cover_photo_cost, { inputmode: 'numeric', pattern: '[0-9]*', min: 0, maxlength: '12' } %> INR
+                <%= g.number_field :cover_photo_cost, { inputmode: 'numeric', pattern: '[0-9]*', min: 0, maxlength: '12' } %> INR/day
               </div>
             </div>
             <div class="form-group">
               <div class="col-md-6 col-sm-12 col-xs-12">
                 <%= g.label :profile_photo_cost, 'Profile Photo' %>
-                <%= g.number_field :profile_photo_cost, { inputmode: 'numeric', pattern: '[0-9]*', min: 0, maxlength: '12' } %> INR
+                <%= g.number_field :profile_photo_cost, { inputmode: 'numeric', pattern: '[0-9]*', min: 0, maxlength: '12' } %> INR/day
               </div>
               <div class="col-md-6 col-sm-12 col-xs-12">
                 <%= g.label :video_post_cost, 'Video Post' %>
-                <%= g.number_field :video_post_cost, { inputmode: 'numeric', pattern: '[0-9]*', min: 0, maxlength: '12' } %> INR
+                <%= g.number_field :video_post_cost, { inputmode: 'numeric', pattern: '[0-9]*', min: 0, maxlength: '12' } %> INR/day
               </div>
             </div>
             <div class="form-group">
               <div class="col-md-6 col-sm-12 col-xs-12">
                 <%= g.label :photo_post_cost, 'Photo Post' %>
-                <%= g.number_field :photo_post_cost, { inputmode: 'numeric', pattern: '[0-9]*', min: 0, maxlength: '12' } %> INR
+                <%= g.number_field :photo_post_cost, { inputmode: 'numeric', pattern: '[0-9]*', min: 0, maxlength: '12' } %> INR/day
+              </div>
+              <div class="col-md-6 col-sm-12 col-xs-12">
+                  <%= g.label :category, class: 'industry-label' %>
+                  <%= g.collection_select :category,  @all_industries, :id, :name, { selected: @selected_industries.map(&:id) }, { class: 'chosen influencer-industry', multiple: true, 'data-parsley-required' => 'true', 'data-parsley-errors-container' => '.industry_field_error' }  %>
+                  <div class="display-inline-block" style="width: 55px"></div>
+                  <div class="industry_field_error"></div>
               </div>
             </div>
           </div>
