Heading of social account tab changed

--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -131,7 +131,7 @@
       </div>
 
       <% if @user.influencer? %>
-          <h4 class="social-account">SOCIAL ACCOUNTS AND PRICING</h4>
+          <h4 class="social-account">SOCIAL ACCOUNTS' INFORMATION AND PRICING</h4>
 
           <button type="button"
                   class="btn-profile-page-add-fb js-add-account"
