Social account section categories list show in individual tab

--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -201,6 +201,10 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     padding-right: 45px;
 }
 
+.social-account-tab-content .chosen-container {
+    width: 147px !important;
+}
+
 /* ============== page responsive stylesheet ================= */
 
 /* style for making compatible with 320 to 767 px devices */
