--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -202,7 +202,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 }
 
 .social-account-tab-content .chosen-container {
-    width: 147px !important;
+    width: 33% !important;
 }
 
 /* ============== page responsive stylesheet ================= */
@@ -513,5 +513,23 @@ div.awesomplete > ul > li[aria-selected="true"] {
 @media (max-width: 768px) {
     .bootbox .modal-dialog {
         width: auto;
+    }
+}
+
+@media (max-width: 992px) {
+    .js-social-account-tab .chosen-container {
+        width: 70% !important;
+    }
+}
+
+@media (max-width: 900px) {
+    .js-social-account-tab .chosen-container {
+        width: 60% !important;
+    }
+}
+
+@media (max-width: 768px) {
+    .js-social-account-tab .chosen-container {
+        width: 34% !important;
     }
 }
