--- a/app/views/influencers/_profile_modal.erb
+++ b/app/views/influencers/_profile_modal.erb
@@ -88,7 +88,7 @@
         <div class="row">
           <div class="col-md-6">
             <div class="view-profile-industry font-raleway"> Industry</div>
-            <p class="font-raleway"><%= account.influencer.categories.pluck(:name).join(', ') if account.influencer.categories.present? %></p>
+            <p class="font-raleway"><%= account.categories.pluck(:name).join(', ') if account.categories.present? %></p>
           </div>
           <div class="col-md-6">
             <div class="view-profile-industry font-raleway"> Influencer</div>
