design custom drop down user .js-skip-select-box  for those select that  you do not want to apply selectBox

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,5 +16,6 @@
  *= require parsley
  *= require jquery.Jcrop.min
  *= require jquery-ui-timepicker-addon
+ *= require jquery.selectBox
  *= require_self
  */
