--- a/app/views/explores/show.html.erb
+++ b/app/views/explores/show.html.erb
@@ -83,6 +83,8 @@
 
 <script type="text/javascript">
     $(document).ready(function () {
+        $('select').selectBox();
+
         var d = document.getElementById("country");
         d.className += "double-arrow-select-icon";
     });
