replace sub-region select with selectBox dropdown menu

--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -156,6 +156,7 @@
 
   <script>
       $(document).ready(function () {
+            /*---- user selectBox for custom dropdown------*/
           $('select:not(.js-skip-select-box)').selectBox();
 
           $(".chosen").chosen({
