Up-Down Arrow changed in profile and explore page

--- a/app/assets/stylesheets/jquery.selectBox.scss
+++ b/app/assets/stylesheets/jquery.selectBox.scss
@@ -67,7 +67,7 @@
     right: 0;
     width: 23px;
     height: 100%;
-    background: url(up-down.png) 50% center no-repeat;
+    background: image-url("up-down.png") 50% center no-repeat;
 }
 
 /* Dropdown menu */
