Influencer >  Profile > Social Accounts information: Industry field height increase according to drop down option

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -2127,3 +2127,7 @@ div.modal-content{
 .raleway-font {
   font-family: "Raleway", sans-serif;
 }
+
+.social-account-tab-content .chosen-container .chosen-drop {
+  position: inherit;
+}
